--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
 theme: jekyll-theme-minimal
-title: Xiu Tang's homepage
+title: Xiu Tang
+
+logo: './xiutang.jpg'
+show_downloads: "false"
+google_analytics: 11
