--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 theme: jekyll-theme-minimal
 title: Xiu Tang
-description: "Researcher at Zhejiang University. I make database queries faster and more accurate. Write me here: tangxiu@zju.edu.cn."
+description: Researcher at Zhejiang University. I make database queries faster and more accurate. Write me here: tangxiu@zju.edu.cn.
 
 logo: './xiutang.jpg'
 show_downloads: false
-google_analytics: 11
