--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Xiu Tang
-description: Researcher at Zhejiang University. I make database queries faster and more accurate. Write me here: tangxiu@zju.edu.cn.
+description: <center>Researcher at Zhejiang University. I make database queries faster and more accurate. Write me here: <tangxiu@zju.edu.cn>.<center>
 
 logo: './xiutang.jpg'
 show_downloads: false
